Update action metadata

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,8 @@
 name: "Kubernetes Action"
 description: "Interacts with kubernetes clusters calling kubectl commands. Integrates support for AWS EKS."
+branding:
+  icon: 'anchor'  
+  color: 'blue'
 inputs:
   args:
     description: "Arguments of kubectl"
